--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   extended_image: ^8.1.1
   photo_manager_image_provider: ^2.1.0
   sticky_headers: ^0.3.0
+  scrollable_positioned_list: ^0.3.5
 
   chewie:
     path: chewie-1.8.7 # Ruta local a tu copia modificada
