--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   photo_manager_image_provider: ^2.1.0
   sticky_headers: ^0.3.0
   scrollable_positioned_list: ^0.3.5
+  media_scanner: ^2.2.0
 
   chewie:
     path: chewie-1.8.7 # Ruta local a tu copia modificada
